# model-manager

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/model_manager/: __init__.py  cli.py  ollama.py  tags.py  usecases.py
tests/: test_model_manager.py
