[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-manager"
version = "0.1.0"
description = "Unified Ollama model administration — list, pull, remove, and tag local models"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dennis Reichenberg" }]
keywords = ["ollama", "llm", "models", "cli", "ai", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy", "pytest-mock>=3"]

[project.scripts]
model-manager = "model_manager.cli:main"

[project.urls]
Homepage = "https://github.com/dennisreichenberg/model-manager"
Repository = "https://github.com/dennisreichenberg/model-manager"
Issues = "https://github.com/dennisreichenberg/model-manager/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
